# Object-Serialization

./: CMakeLists.txt  README.md  main.cpp  socket.yaml
introspection/: json.hpp  macros.hpp  metadata.hpp  yaml.hpp
